refactor: slimdown message format modules